# copane

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  copane.txt  install.sh  pyproject.toml  setup_python.sh  uninstall.sh
autoload/: copane.vim  tmux_agent.vim
doc/: copane.txt  tags
ftplugin/: javascript.vim  python.vim
python/: app.py  check_deps.py  file_utils.py  pyproject.toml  term_styles.py  tmux_agent.py  tools.py  view_conversation.py
python/src/copane/: _version.py  app.py  cli.py  completers.py  conversation_history.py  file_utils.py  log.py  model_config.py  model_provider.py  preview.py  screen_utils.py  session_store.py  term_styles.py  tmux_agent.py  tools.py  tracing.py  ui.py  view_conversation.py
python/src/copane/renderers/: __init__.py  _base.py  _inline_formatting.py  _state_machine.py  markdown_it_renderer.py  raw_renderer.py  raw_replace_renderer.py  regex_renderer.py  rich_buffer_renderer.py
python/src/copane/tools/: __init__.py  _base.py  edit_file.py  get_current_dir.py  grep_files.py  list_files.py  read_file.py  run_command.py  web_search.py  write_file.py
python/tests/: conftest.py  test_conversation_history.py  test_model_config.py  test_model_provider.py  test_screen_utils.py  test_screen_utils_composed.py  test_tmux_agent.py  test_tool_approval.py  test_tool_edit_file.py  test_tool_get_current_dir.py  test_tool_grep_files.py  test_tool_helpers.py  test_tool_list_files.py  test_tool_read_file.py  test_tool_result.py  test_tool_run_command.py  test_tool_schema.py  test_tool_write_file.py  test_tools.py
(+4 files in other folders)
