[project]
name = "copane"
version = "0.0.01"
description = "AI-powered tmux pane for Vim/Neovim"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.2",
    "langsmith>=0.7.30",
    "openai-agents>=0.13.5",
    "prompt-toolkit>=3.0.52",
    "pynvim>=0.6.0",
]

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Not required, though is sometimes behaves oddly if not specified
packages = ["src/copane"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
